# dioxus-jlpt-flashcard

./: .gitignore  Cargo.toml  Dioxus.md  Dioxus.toml  LICENSE.MD  README.md
assets/: main.css  ui-playground.html
data/: test.db  words_database.db
src/: db.rs  flashcard.rs  footer.rs  lib.rs  main.rs  nav.rs  story.rs  test.rs  testcard.rs  utils.rs  wordexplain_gemma.rs  wordlist.rs
