[package]
name = "dxgui"
version = "0.1.0"
authors = ["vincent <2vincentlin@gmail.com>"]
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros" ] } # For SQLite database support
tokio =  {version = "1.45.1", features = ["full"]} # For async runtime

csv = "1.3.1" # For reading and writing CSV files
serde = { version = "1.0.219", features = ["derive"] } # For deserializing CSV data into structs
tts = "0.26.3" # for text to voice

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

